// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore dev-* for --release 1`] = `
Object {
  "components": Array [
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Dictionary\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/dictionary-v1.4.1/Dictionary.cls",
      },
      "filename": "Dictionary.cls",
      "name": "Dictionary",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"Validation\\"
",
      "details": Object {
        "path": "projects/dev/src/Validation.bas",
      },
      "filename": "Validation.bas",
      "name": "Validation",
      "type": "module",
    },
  ],
  "from_dependencies": Object {
    "components": Object {
      "Dictionary": "dictionary",
    },
    "references": Object {},
  },
  "name": "VBAProject",
  "references": Array [],
}
`;

exports[`should load BuildGraph from empty project 1`] = `
Object {
  "components": Array [],
  "from_dependencies": Object {
    "components": Object {},
    "references": Object {},
  },
  "name": "VBAProject",
  "references": Array [],
}
`;

exports[`should load BuildGraph from standard project 1`] = `
Object {
  "components": Array [
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Class1\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed = Fa...",
      "details": Object {
        "path": "projects/complex/src/Class1.cls",
      },
      "filename": "Class1.cls",
      "name": "Class1",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Dictionary\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/dictionary-v1.4.1/Dictionary.cls",
      },
      "filename": "Dictionary.cls",
      "name": "Dictionary",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"IWebAuthenticator\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_E...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/web-v4.1.5/src/IWebAuthenticator.cls",
      },
      "filename": "IWebAuthenticator.cls",
      "name": "IWebAuthenticator",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"JsonConverter\\"
''
' VBA-JSON v2.3.0
' (c) Tim Hall - https://github.com/VBA-tools/VBA-JSON
'
' JSON Converter for VBA
'
' Errors:
' 10001 - JSON parse error
'
' @class JsonConverter
' @autho...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/json-v2.3.0/JsonConverter.bas",
      },
      "filename": "JsonConverter.bas",
      "name": "JsonConverter",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Sheet1\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = Tru...",
      "details": Object {
        "path": "projects/complex/src/Sheet1.cls",
      },
      "filename": "Sheet1.cls",
      "name": "Sheet1",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Sheet2\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = Tru...",
      "details": Object {
        "path": "projects/complex/src/Sheet2.cls",
      },
      "filename": "Sheet2.cls",
      "name": "Sheet2",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Sheet3\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed = Tru...",
      "details": Object {
        "path": "projects/complex/src/Sheet3.cls",
      },
      "filename": "Sheet3.cls",
      "name": "Sheet3",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"ThisWorkbook\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = True
Attribute VB_Exposed...",
      "details": Object {
        "path": "projects/complex/src/ThisWorkbook.cls",
      },
      "filename": "ThisWorkbook.cls",
      "name": "ThisWorkbook",
      "type": "class",
    },
    Object {
      "binaryPath": "UserForm1.frx",
      "code": "VERSION 5.00
Begin {C62A69F0-16DC-11CE-9E98-00AA00574A4F} UserForm1 
   Caption         =   \\"UserForm1\\"
   ClientHeight    =   3015
   ClientLeft      =   120
   ClientTop       =   465
   ClientWidth     =...",
      "details": Object {
        "path": "projects/complex/src/UserForm1.frm",
      },
      "filename": "UserForm1.frm",
      "name": "UserForm1",
      "type": "form",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"Validation\\"
Public Function Validate() As String
    On Error GoTo ErrorHandling

    Dim Errors As New Collection

    If ThisWorkbook.VBProject.VBComponents.Count <> 9 Then
        Err...",
      "details": Object {
        "path": "projects/complex/src/Validation.bas",
      },
      "filename": "Validation.bas",
      "name": "Validation",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"WebClient\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed =...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/web-v4.1.5/src/WebClient.cls",
      },
      "filename": "WebClient.cls",
      "name": "WebClient",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"WebHelpers\\"
''
' WebHelpers v4.1.5
' (c) Tim Hall - https://github.com/VBA-tools/VBA-Web
'
' Contains general-purpose helpers that are used throughout VBA-Web. Includes:
'
' - Logging
' -...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/web-v4.1.5/src/WebHelpers.bas",
      },
      "filename": "WebHelpers.bas",
      "name": "WebHelpers",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"WebRequest\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/web-v4.1.5/src/WebRequest.cls",
      },
      "filename": "WebRequest.cls",
      "name": "WebRequest",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"WebResponse\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/web-v4.1.5/src/WebResponse.cls",
      },
      "filename": "WebResponse.cls",
      "name": "WebResponse",
      "type": "class",
    },
  ],
  "from_dependencies": Object {
    "components": Object {
      "Dictionary": "dictionary",
      "IWebAuthenticator": "web",
      "JsonConverter": "json",
      "WebClient": "web",
      "WebHelpers": "web",
      "WebRequest": "web",
      "WebResponse": "web",
    },
    "references": Object {},
  },
  "name": "VBAProject",
  "references": Array [],
}
`;

exports[`should load BuildGraph with devDependencies 1`] = `
Object {
  "components": Array [
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"Dictionary\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed ...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/dictionary-v1.4.1/Dictionary.cls",
      },
      "filename": "Dictionary.cls",
      "name": "Dictionary",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"JsonConverter\\"
''
' VBA-JSON v2.3.0
' (c) Tim Hall - https://github.com/VBA-tools/VBA-JSON
'
' JSON Converter for VBA
'
' Errors:
' 10001 - JSON parse error
'
' @class JsonConverter
' @autho...",
      "details": Object {
        "path": ".vba-blocks/sources/vba-blocks/json-v2.3.0/JsonConverter.bas",
      },
      "filename": "JsonConverter.bas",
      "name": "JsonConverter",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "VERSION 1.0 CLASS
BEGIN
  MultiUse = -1  'True
END
Attribute VB_Name = \\"TestClass\\"
Attribute VB_GlobalNameSpace = False
Attribute VB_Creatable = False
Attribute VB_PredeclaredId = False
Attribute VB_Exposed =...",
      "details": Object {
        "path": "projects/dev/src/TestClass.cls",
      },
      "filename": "TestClass.cls",
      "name": "TestClass",
      "type": "class",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"TestModule\\"
",
      "details": Object {
        "path": "projects/dev/src/TestModule.bas",
      },
      "filename": "TestModule.bas",
      "name": "TestModule",
      "type": "module",
    },
    Object {
      "binaryPath": undefined,
      "code": "Attribute VB_Name = \\"Validation\\"
",
      "details": Object {
        "path": "projects/dev/src/Validation.bas",
      },
      "filename": "Validation.bas",
      "name": "Validation",
      "type": "module",
    },
  ],
  "from_dependencies": Object {
    "components": Object {
      "Dictionary": "dictionary",
      "JsonConverter": "json",
    },
    "references": Object {},
  },
  "name": "VBAProject",
  "references": Array [],
}
`;
